contract test
